--- a/client/src/app/tangible-editor/tangible-editor.component.scss
+++ b/client/src/app/tangible-editor/tangible-editor.component.scss
@@ -32,12 +32,12 @@ a.disabled {
 }
 
 .highlight {
-    background-color: #3399ff;
+    background-color: #ccc;
     border-radius: 4px;
 }
 
 #video-canvas {
-    background: #ddd;
+    background: #ccc;
     display: block;
     margin-left: auto;
     margin-right: auto;
