--- a/client/src/app/tangible-editor/tangible-editor.component.html
+++ b/client/src/app/tangible-editor/tangible-editor.component.html
@@ -72,7 +72,7 @@
                     <div class="card">
                         <div class="card-block">
                             <div class="card-text">
-                                <div style="display: block; height:500px; overflow-y: auto;">
+                                <div class="tile-display">
                                     <div class="tangible" [ngClass]="{'highlight': block.highlight}"
                                         *ngFor="let block of blocks">
                                         <img src="/assets/img/{{block.image}}.png">
