--- a/client/src/app/tangible-editor/tangible-editor.component.scss
+++ b/client/src/app/tangible-editor/tangible-editor.component.scss
@@ -46,3 +46,9 @@ a.disabled {
 .hide-from-view {
     visibility: hidden;
 }
+
+.tile-display {
+    display: block;
+    height: calc(100vh - 170px);
+    overflow-y: auto;
+}
