--- a/client/src/app/user-settings/user-settings.component.html
+++ b/client/src/app/user-settings/user-settings.component.html
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Settings</h3>
     <div class="modal-body">
         <form clrForm>
-            <app-user-settings-editor [settings]="settings"></app-user-settings-editor>
+            <app-user-settings-editor [settings]="settings" [showConfiguration]="showConfiguration"></app-user-settings-editor>
         </form>
         <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
             <div class="alert-items">
