--- a/client/src/app/users-list/users-list.component.html
+++ b/client/src/app/users-list/users-list.component.html
@@ -59,7 +59,7 @@
             <clr-dg-cell class="narrow-column">
                 <clr-icon shape="error-standard" class="is-error" *ngIf="user.hasError"></clr-icon>
             </clr-dg-cell>
-            <clr-dg-cell>{{user.name}}</clr-dg-cell>
+            <clr-dg-cell><span class="can-edit" (click)="doEdit(user)">{{user.name}}</span></clr-dg-cell>
             <clr-dg-cell>{{user.role}}</clr-dg-cell>
             <clr-dg-cell>{{user.whenAdded | date}}</clr-dg-cell>
         </clr-dg-row>
