--- a/client/src/app/robot-types-list/robot-types-list.component.scss
+++ b/client/src/app/robot-types-list/robot-types-list.component.scss
@@ -1,3 +1,29 @@
 .can-edit {
     cursor: pointer;
 }
+
+.dropzone {
+    width: 60%;
+    height: 280px;
+    padding: 2rem;
+    text-align: center;
+    border: dashed 1px #979797;
+    position: relative;
+    margin: 0 auto;
+
+    input {
+        opacity: 0;
+        position: absolute;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+
+    h3 {
+        font-size: 20px;
+        font-weight: 600;
+        margin: 6px;
+    }
+}
