Fixed the logo links on the home pages

--- a/client/src/app/teacher-home/teacher-home.component.html
+++ b/client/src/app/teacher-home/teacher-home.component.html
@@ -17,7 +17,7 @@
     <app-heartbeat></app-heartbeat>
     <header class="header-4">
         <div class="branding">
-            <a href="..." class="nav-link">
+            <a href="/teacher" class="nav-link">
                 <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
             </a>
