--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -46,7 +46,7 @@
     <app-heartbeat></app-heartbeat>
     <header class="header-4">
         <div class="branding">
-            <a href="..." class="nav-link">
+            <a href="/student" class="nav-link">
                 <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
                 <span class="subtitle"
