--- a/client/src/app/robot-configuration/robot-configuration.component.html
+++ b/client/src/app/robot-configuration/robot-configuration.component.html
@@ -15,11 +15,14 @@
                     <div>
                         The following addresses are available:
                     </div>
-                    <ul class="list">
-                        <li *ngFor="let address of addresses">
-                            {{address}}
-                        </li>
-                    </ul>
+                    <div *ngFor="let address of addresses">
+                        <clr-icon shape="network-globe"
+                            [ngClass]="{'has-alert': address.isDefault, 'site-address': canConfigureAddresses}"
+                            size="24" (click)="setDefault(address)"></clr-icon>
+                        <span (click)="showQRCode(address)">
+                            {{address.url}}
+                        </span>
+                    </div>
                 </div>
             </div>
             <div class="card-footer" *ngIf="!downloadingAddresses">
@@ -55,4 +58,23 @@
         </div>
     </div>
 </div>
-<app-robot-package [robotType]="currentRobotType" *ngIf="currentRobotType" (closed)="currentRobotType = undefined"></app-robot-package>
+<app-robot-package [robotType]="currentRobotType" *ngIf="currentRobotType" (closed)="currentRobotType = undefined">
+</app-robot-package>
+<clr-modal [(clrModalOpen)]="isQRCodeWindowOpen" [clrModalStaticBackdrop]="false" [clrModalClosable]="false">
+    <h3 class="modal-title">QR Code</h3>
+    <div class="modal-body">
+        <div class="qr-code-display">
+            <div>
+                <img [src]="addressQRCode" class="qr-code">
+            </div>
+            <div>
+                {{selectedAddress.url}}
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="isQRCodeWindowOpen = false">
+            Close
+        </button>
+    </div>
+</clr-modal>
