--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -46,6 +46,7 @@
             <app-robot-types-list *ngIf="currentView=='robotTypes'"></app-robot-types-list>
             <app-users-list *ngIf="currentView=='users'"></app-users-list>
             <app-system-status *ngIf="currentView=='status'"></app-system-status>
+            <app-robot-configuration *ngIf="currentView=='configuration'" [canConfigureAddresses]="true"></app-robot-configuration>
         </div>
         <nav class="sidenav">
             <section class="sidenav-content">
@@ -63,6 +64,9 @@
                 </a> -->
                 <a href="javascript://" class="nav-link" [class.active]="currentView=='users'" (click)="changeView('users')">
                     Users
+                </a>
+                <a href="javascript://" class="nav-link" [class.active]="currentView=='configuration'" (click)="changeView('configuration')">
+                    Configuration
                 </a>
             </section>
         </nav>
