Display the default site QR on the login

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -40,4 +40,7 @@
             </div>
         </div>
     </form>
+    <div class="content-area">
+        <img [src]="qrCodeAddress" class="qr-code">
+    </div>
 </div>
