--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -8,3 +8,13 @@
     font-size: smaller;
     font-style: italic;
 }
+
+.qr-code {
+    margin: 25vh auto;
+    height: 50vh;
+    display: block;
+}
+
+.content-area {
+    width: 100%;
+}
