Added a page indicator for teacher and admin homes

--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -20,6 +20,7 @@
             <a href="/administrator" class="nav-link">
                 <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
+                <span class="subtitle">&nbsp;Administrator</span>
             </a>
         </div>
         <div class="header-actions">
