--- a/client/src/app/teacher-home/teacher-home.component.html
+++ b/client/src/app/teacher-home/teacher-home.component.html
@@ -20,6 +20,7 @@
             <a href="/teacher" class="nav-link">
                 <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
+                <span class="subtitle">&nbsp;Teacher</span>
             </a>
         </div>
         <div class="header-actions">
