--- a/client/src/app/student-connect/student-connect.component.scss
+++ b/client/src/app/student-connect/student-connect.component.scss
@@ -1,6 +1,7 @@
 .qr-code {
     display: block;
-    height: 80vh;
+    height: 70vh;
+    min-width: 60vw;
     margin-left: auto;
     margin-right: auto;
 }
