--- a/client/src/app/students-list/students-list.component.scss
+++ b/client/src/app/students-list/students-list.component.scss
@@ -1,3 +1,10 @@
 .can-edit {
     cursor: pointer;
 }
+
+.qr-code {
+    height: 50vh; 
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
