--- a/client/src/app/system-initialisation/system-initialisation.component.html
+++ b/client/src/app/system-initialisation/system-initialisation.component.html
@@ -1,13 +1,23 @@
 <div class="page-centre">
-    <form clrForm clrLayout="vertical">
-        <clr-input-container>
-            <label>Password</label>
-            <input clrInput type="text" [(ngModel)]="password" name="password" />
-        </clr-input-container>
+    <div>
+        The system has not been initialised. Please set the administrator's password.
+    </div>
 
-        <div class="btn-group" style="margin-top: 1em;">
-            <button class="btn btn-primary" (click)="doSave()">Save</button>
+    <form clrForm clrLayout="vertical">
+        <div class="clr-row">
+            <div class="clr-col-8">
+                <clr-input-container>
+                    <label>Password</label>
+                    <input clrInput type="text" [(ngModel)]="password" name="password" />
+                </clr-input-container>
+            </div>
+            <div class="clr-col-4">
+                <div class="btn-group" style="margin-top: 2.5em;">
+                    <button class="btn btn-primary" (click)="doSave()">Save</button>
+                </div>
+            </div>
         </div>
+
     </form>
 
     <div class="error active" *ngIf="error">
